test_suite5/ALAN/test_suite/alan-2022-examples/failing/004240_mutation.alan
source L6s begin leave; * leave end
